reduced max-height of social feed snippet to avoid peeking text on overflow: hidden

--- a/css/main.css
+++ b/css/main.css
@@ -3824,7 +3824,7 @@ body {
     }
     
     .social-snippet_facebook .stream .section-text {
-        max-height: 270px;
+        max-height: 267px;
         overflow: hidden;
         display: block;
     }
